--- a/CAPstone/CAPstone.csproj
+++ b/CAPstone/CAPstone.csproj
@@ -184,15 +184,31 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ParentController.cs" />
+    <Compile Include="Controllers\PreferenceAPI\PreferenceController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
+    <Compile Include="Controllers\SitterController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910251829345_initialMigrations.cs" />
+    <Compile Include="Migrations\201910251829345_initialMigrations.Designer.cs">
+      <DependentUpon>201910251829345_initialMigrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910251901122_changedpropertyforaddressinparentsmodelfrominttostring.cs" />
+    <Compile Include="Migrations\201910251901122_changedpropertyforaddressinparentsmodelfrominttostring.Designer.cs">
+      <DependentUpon>201910251901122_changedpropertyforaddressinparentsmodelfrominttostring.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910281706521_deletedpreferencelistfromconfiguartions.cs" />
+    <Compile Include="Migrations\201910281706521_deletedpreferencelistfromconfiguartions.Designer.cs">
+      <DependentUpon>201910281706521_deletedpreferencelistfromconfiguartions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Parent.cs" />
+    <Compile Include="Models\Preferences.cs" />
     <Compile Include="Models\Sitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -255,10 +271,17 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Parent\Index.cshtml" />
+    <Content Include="Views\Parent\Create.cshtml" />
+    <Content Include="Views\Parent\Details.cshtml" />
+    <Content Include="Views\Parent\Edit.cshtml" />
+    <Content Include="Views\index.cshtml" />
+    <Content Include="Views\Preferences\View.cshtml" />
+    <Content Include="Views\Preferences\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Parent\" />
+    <Folder Include="Views\Sitter\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -272,6 +295,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201910251829345_initialMigrations.resx">
+      <DependentUpon>201910251829345_initialMigrations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910251901122_changedpropertyforaddressinparentsmodelfrominttostring.resx">
+      <DependentUpon>201910251901122_changedpropertyforaddressinparentsmodelfrominttostring.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910281706521_deletedpreferencelistfromconfiguartions.resx">
+      <DependentUpon>201910281706521_deletedpreferencelistfromconfiguartions.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
